# ipark-pick-v2

./: .gitignore  README.md  env.example  pyproject.toml
scripts/: cleanup-old.sh  com.ipark-drawing.heartbeat.plist  com.ipark-drawing.morning.plist  com.ipark-drawing.notice.plist  com.ipark-drawing.winners.plist  install-launchd.sh  run-morning.sh  run-notice.sh  run-winners.sh
specs/active/: 20260503-naver-cafe-comment-bot.md
src/ipark_drawing/: board_finder.py  browser.py  cli.py  comment_bot.py  config.py  heartbeat.py  inspector.py  locking.py  naver_auth.py  notice_check.py  orchestrator.py  state.py  telegram.py  winner_check.py
tests/: conftest.py  test_comment_bot.py
